# VlessVpn-app

./: .gitignore  README.md  gradlew  gradlew.bat  log.txt  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/musicses/vlessvpn/app/: ConfigAdapter.java  ConfigStore.java  MainActivity.java  VlessConfig.java  VlessHeader.java  VlessProxyManager.java  VlessProxyService.java  VlessVpnService.java  VpnStateHolder.java
app/src/main/res/drawable/: ic_vpn.xml
app/src/main/res/layout/: activity_main.xml  item_config.xml
app/src/main/res/values/: themes.xml
tun2socks/: build.gradle  proguard-rules.pro
tun2socks/src/main/cpp/: CMakeLists.txt  tun2socks.cpp
tun2socks/src/main/cpp/prebuilt/lib/arm64-v8a/: libtun2socks.a.orig
tun2socks/src/main/cpp/prebuilt/lib/armeabi-v7a/: libtun2socks.a.orig
tun2socks/src/main/cpp/prebuilt/lib/x86/: libtun2socks.a.orig
tun2socks/src/main/cpp/prebuilt/lib/x86_64/: libtun2socks.a.orig
tun2socks/src/main/java/com/musicses/vlessvpn/: Tun2Socks.java
